@@ -16,6 +16,7 @@
     * 4037 FIX: Fix graphs that have optional metrics...
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
     * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
+    * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page
 
 
 1.2.8p13:
